testsuite/tests/grammar/invalid_token_node/test.out
test.py:14: error: "token_node" annotation inconsistent with inherited AST node
Done
